<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.zero.modeloa.view.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarlayout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            ><!--Efecto de scroll a los hijos-->

            <ImageView
            android:id="@+id/img_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/bagon2"
                android:fitsSystemWindows="true"
                android:transitionName="@string/transition_picture"
                app:layout_collapseMode="parallax"/><!--Efecto de movimiento-->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/><!--Efecto fijo-->

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_activity">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_username_detail"
                android:text="@string/username_card"
                android:paddingLeft="@dimen/padding_horizontal_login"
                android:paddingRight="@dimen/padding_activity"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_activity"
                android:paddingLeft="@dimen/padding_horizontal_login"
                android:paddingRight="@dimen/padding_horizontal_login">

                <TextView
                    android:id="@+id/tv_likeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_likeNumber_detail"
                    android:text="10"/>
                <TextView
                    android:id="@+id/tv_secondWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_likeNumber_detail"
                    android:text="@string/secondWord_detail"
                    android:layout_marginLeft="@dimen/secondWord_margin_left"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_devider"
                android:background="@color/grey_700"/>
            <TextView
                android:id="@+id/tv_titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_likeNumber_detail"
                android:text="@string/title_image"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/paddingTop_titleImageDetail"/>
            <TextView
                android:id="@+id/tv_textContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_likeNumber_detail"
                android:text="@string/lorem"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/paddingTop_titleImageDetail"
                android:paddingLeft="@dimen/padding_horizontal_textContentDetail"
                android:paddingRight="@dimen/padding_horizontal_textContentDetail"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_favorite_border"/>

</android.support.design.widget.CoordinatorLayout>
